# IPyCam

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.intel  Dockerfile.nvidia  LICENSE  README.md  camera_config.json  camera_config.py  docker-compose.yml  entrypoint.sh  http_handler.py  ip_camera.py  onvif_service.py  ptz_controller.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  video_streamer.py  ws_discovery.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yaml
examples/: 360_ptz.py  README.md  basic_webcam.py  custom_config.py  generated_content.py  hardware_ptz.py  ptz_demo.py  screen_stream.py  video_file.py  ximea_stream.py
ipycam/: __init__.py  __main__.py  camera.py  config.py  discovery.py  framequeue.py  go2rtc.yaml  http.py  logging_config.py  mjpeg.py  onvif.py  ptz.py  recorder.py  rtsp.py  streamer.py  webrtc.py
ipycam/static/: index.html  webrtc.html
ipycam/static/css/: style.css
ipycam/static/js/: app.js
ipycam/static/soap/: fault.xml  get_device_information.xml  get_scopes.xml  get_services.xml  get_stream_uri.xml  get_users.xml  get_video_encoder_configuration.xml  get_video_source_configuration.xml  ptz_absolute_move.xml  ptz_get_configurations.xml  ptz_get_node.xml  ptz_get_nodes.xml  ptz_get_presets.xml  ptz_get_status.xml  ptz_goto_preset.xml  ptz_relative_move.xml  ptz_set_preset.xml  ptz_stop.xml
static/: index.html
static/css/: style.css
static/js/: app.js
static/soap/: envelope.xml  get_audio_decoder_configurations.xml  get_capabilities.xml  get_profiles.xml  get_services.xml  get_snapshot_uri.xml  get_system_date_time.xml  probe_match.xml  ptz_continuous_move.xml  ptz_get_service_capabilities.xml  ptz_goto_home.xml
tests/: conftest.py  test_camera.py  test_config.py  test_discovery.py  test_framequeue.py  test_http.py  test_logging_config.py  test_main.py  test_mjpeg.py  test_onvif.py  test_ptz.py  test_recorder.py  test_rtsp.py  test_streamer.py  test_webrtc.py
