[project]
name = "ipycam"
dynamic = ["version"]
description = "Pure Python Virtual IP Camera with ONVIF support"
authors = [
    {name = "Oliver Hamilton", email = "oliver9523@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["camera", "onvif", "rtsp", "streaming", "virtual-camera"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "aiohttp>=3.9.0",
    "aiortc>=1.14.0",
]

[project.scripts]
ipycam = "ipycam.__main__:main"

[project.optional-dependencies]
camera360 = [
    "framesource @ git+https://github.com/olkham/FrameSource.git",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ipycam"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ipycam.__version__.__version__"}

[tool.setuptools.package-data]
ipycam = ["static/**/*"]
